code/typescript/SecurityExplanation/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Security Explanation client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1.6.0-blue)](https://developer.factset.com/api-catalog/security-explanation-api)
[![npm](https://img.shields.io/badge/npm-v2.2.1-orange)](https://www.npmjs.com/package/@factset/sdk-securityexplanation/v/2.2.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to use Security Explanation through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.6.0
- SDK version: 2.2.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-securityexplanation@2.2.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-securityexplanation@2.2.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, SecurityExplanationApi } = require('@factset/sdk-securityexplanation');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new SecurityExplanationApi();
const id = 80931ca92c7b432380dcd51f539c79f5; // String | id

// Call api endpoint
apiInstance.checkExplanationStatus(id).then(
  data => {

      // data is a responsewrapper: CheckExplanationStatusResponseWrapper
      switch (data.statusCode) {

          case 201:
             // ExplanationStatusRoot
             console.log(data.getResponse201());
             break;

          case 202:
             // ExplanationCreateResponseRoot
             console.log(data.getResponse202());
             break;

      }

  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-securityexplanation');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/security-explanation/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*securityexplanation.SecurityExplanationApi* | [**checkExplanationStatus**](docs/SecurityExplanationApi.md#checkExplanationStatus) | **GET** /explanation/{id}/status | Get explanation status by id
*securityexplanation.SecurityExplanationApi* | [**createExplanation**](docs/SecurityExplanationApi.md#createExplanation) | **POST** /explanation | Request explanation
*securityexplanation.SecurityExplanationApi* | [**fetchExplanationResults**](docs/SecurityExplanationApi.md#fetchExplanationResults) | **GET** /explanation/{id}/result | Get explanation results by id


## Documentation for Models

 - [securityexplanation.APIClientErrorResponse](docs/APIClientErrorResponse.md)
 - [securityexplanation.APIError](docs/APIError.md)
 - [securityexplanation.BrokerResearchSummary](docs/BrokerResearchSummary.md)
 - [securityexplanation.ErrorSource](docs/ErrorSource.md)
 - [securityexplanation.ExplanationCreateResponse](docs/ExplanationCreateResponse.md)
 - [securityexplanation.ExplanationCreateResponseRoot](docs/ExplanationCreateResponseRoot.md)
 - [securityexplanation.ExplanationStatus](docs/ExplanationStatus.md)
 - [securityexplanation.ExplanationStatusRoot](docs/ExplanationStatusRoot.md)
 - [securityexplanation.SecurityExplanationParametersRoot](docs/SecurityExplanationParametersRoot.md)
 - [securityexplanation.SecurityExplanationRequestParameters](docs/SecurityExplanationRequestParameters.md)
 - [securityexplanation.SecurityExplanationResponse](docs/SecurityExplanationResponse.md)
 - [securityexplanation.SecurityExplanationResponseRoot](docs/SecurityExplanationResponseRoot.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
